Fixing some font issues
This is related to #151 - several of the fonts had a style=bold, but we want to use LateBold instead and a style of normal. This mostly affected the Community page where all the BitHub content was hard to read. Should all be Lato now, but better size and weight.

--- a/scripts/static/styles/bithub.less
+++ b/scripts/static/styles/bithub.less
@@ -5,18 +5,22 @@
 		margin-bottom: 10px;
 		padding-bottom: 10px;
 		border-bottom: solid 1px #eee;
+		font-size: 14px;
+		line-height: 18px;
+		
 		
 		&:last-child {
 			border-bottom: solid 0px #eee;
 		}
 		
 		h5, h5 a {
-			font-weight: bold;
+			font-family: 'LatoBold', sans-serif;
+			font-weight: normal;
+			font-style: normal;
 			color: #000;
 			text-decoration: none;
 			margin: 0;
-			font-size: 14px;
-			line-height: 18px;
+
 			& :hover {
 				text-decoration: underline;
 			}
@@ -34,12 +38,12 @@
 		p {
 			margin: 0;
 			color: #333;
-			font-size: 12px;
-			line-height: 17px;
 		}
 		.score {
 			font-size: 14px;
-			font-weight: bold;
+			font-family: 'LatoBold', sans-serif;
+			font-weight: normal;
+			font-style: normal;
 			width: 36px;
 		}
 		img {
@@ -51,7 +55,7 @@
 	}
 	.bithub-footer {
 		color: #999;
-		font-size: 11px;
+		font-size: 12px;
 		text-align: right;
 		display: block;
 		line-height: 14px;
@@ -66,8 +70,6 @@
 .irc-chat-container {
 	background-color: #fff;
 	border: 1px solid #dedbdb;
-	font-size: 12px;
-	line-height: 14px;
 	height: 320px;
 	.border-radius;
 }
