--- a/scripts/static/styles/community.less
+++ b/scripts/static/styles/community.less
@@ -7,8 +7,7 @@
 		.irc-chat-container {
 			margin-top: 20px;
 			overflow: scroll;
-			font: 14px/18px Arial, Helvetica, Geneva, sans-serif;
-			
+					
 			.username {
 				font-weight: bold;
 			}
@@ -24,6 +23,9 @@
 		margin-top: -80px;
 		min-height: 360px;
 		text-align: left;
+		font-size: 14px;
+		line-height: 18px;
+		
 		&:before {  
 			left: 74px;
 		}
@@ -51,7 +53,9 @@
 			h2 {
 				color: #000;
 				text-transform: none;
-				font-weight: bold;
+				font-family: 'LatoBold', sans-serif;
+				font-weight: normal;
+				font-style: normal;
 				font-size: 14px;
 
 				a {
