--- a/scripts/static/styles/fonts.less
+++ b/scripts/static/styles/fonts.less
@@ -25,7 +25,11 @@
     font-style: normal;
 
 }
-
+h1,h2,h3,h4,h5,h6,strong,b{
+	font-family: 'LatoBold', sans-serif;
+	font-weight: normal !important;
+	font-style: normal !important;
+}
 body {
   background: url(../img/bkg-dots.png) repeat #fff;
   font-family: 'Lato', sans-serif;
@@ -40,7 +44,9 @@ body {
     color: #767676;
     display: block;
     font-size: 17px;
-    font-weight: bold;
+    font-family: 'LatoBold', sans-serif;
+    font-weight: normal;
+    font-style: normal;
     line-height: 40px;
 }
 
